--- a/RCC/Objects/Objects/Template.build_log.htm
+++ b/RCC/Objects/Objects/Template.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.3.0.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\keil\STM32项目\STM32F407ZGT6\标准库demo\RCC\Objects\Template.uvprojx
+D:\keil\STM32项目\STM32F407ZGT6\标准库demo\demo_F407_SPL\RCC\Objects\Template.uvprojx
 Project File Date:  11/21/2025
 
 <h2>Output:</h2>
@@ -43,7 +43,7 @@ Package Vendor: Keil
 <h2>Collection of Component include folders:</h2>
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
